# SolanaSCM

./: Anchor.toml  Cargo.toml  README.md  file.txt  text.txt
programs/solana-scm/: Cargo.toml
programs/solana-scm/src/: lib.rs
programs/solanascm/: Cargo.toml
programs/solanascm/src/: devices.rs  lib.rs  lib2.rs  lib3.rs  registries.rs
programs/solanascm/src/prueba/: devices.rs  lib.rs  lib2.rs  lib3.rs  registries.rs
tests/: Cargo.toml  solana_scm.rs  solanascm.ts
tests/src/: test_initialize.rs
