[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
tokio = { version = "1.40.0", features = ["full"] }
anchor-spl = "0.30.1"
spl-token = "6.0.0"
solana-sdk = "1.17.3"        # Versión alineada
solana-client = "1.17.3"      # Versión alineada
solana-program = "1.17.3"     # Asegúrate de que también uses esta versión
solana-cli-config = "1.17.3"  # Esta debe coincidir con la versión de solana-sdk
solana-program-test = "1.17.3"

[dev-dependencies]
anchor-cli = "0.30.1"
