[package]
name = "solana-scm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_scm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
#borsh = "0.9.3"
borsh = "1.5.1"
borsh-derive = "1.5.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
thiserror = "1.0.64"
tokio = { version = "1.40.0",  features = ["full"]}
anchor-spl = "0.30.1"
anchor-cli = "0.30.1"
solana-sdk = "1.17.3"        # Versión alineada
solana-client = "1.17.3"      # Versión alineada
solana-program = "1.17.3"     # Asegúrate de que también uses esta versión
solana-cli-config = "1.17.3"  # Esta debe coincidir con la versión de solana-sdk



