[package]
name = "solanascm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solanascm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
borsh = "1.5.1"
solana-program = "1.10" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-sdk = "4.0.0"