[package]
name = "solanascm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solanascm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
borsh = "0.9.3"
solana-program = "1.14.0"
borsh-derive = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40.0",  features = ["full"]}
# near-sdk = "4.0.0"

[dev-dependencies]
anchor-test = "0.29.0" # Añade esto para las pruebas
